--- a/src/components/getuser/User.css
+++ b/src/components/getuser/User.css
@@ -18,6 +18,8 @@
     cursor: pointer;
     text-decoration: none;
     font-weight: 500;
+    margin: 180px
+
 
 }
 
@@ -48,6 +50,7 @@
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
+    margin: 5px;
 
 }
 
