--- a/src/components/getuser/User.css
+++ b/src/components/getuser/User.css
@@ -18,11 +18,11 @@
     cursor: pointer;
     text-decoration: none;
     font-weight: 500;
-    margin: 10%;
+    margin: 5%;
     margin-top: 2%;
     margin-bottom: 1%;
-    width: 10%;
-    height: 10%;
+    width: 20%;
+    height: 20%;
    
 
 }
@@ -74,8 +74,9 @@
 .dropbox{
     position: relative;
     display: inline-block;
-    margin: 5px;
-    padding-left: 15% ;
+    margin: 10px;
+    padding-left: 7% ;
+    margin-right: 5%;
     
 }
 .p{
