--- a/src/components/getuser/User.css
+++ b/src/components/getuser/User.css
@@ -12,7 +12,7 @@
 .addButton{
     background-color: purple;
     color: white;
-    padding: 10px;
+    padding: 8px;
     border: 5px;
     border-radius: 5px;
     cursor: pointer;
@@ -57,7 +57,7 @@
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
-    margin: 5px;
+    margin: 3px;
 
 }
 
@@ -81,4 +81,24 @@
 }
 .p{
     position: relative;
+}
+
+.download{
+    position: relative;
+    display: inline-block;
+    margin: 10px;
+    padding-left: 7% ;
+    margin-right: 2%;
+    cursor: pointer;
+    text-decoration: none;
+    color: white ;
+    background-color: purple;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 0 8%;
+    width: 15%;
+    text-align: center;
+
+    
+
 }
